# mocker

./: Cargo.toml  Changes.md  LICENSE  README.md  \  account_details.json  client_details_v1.json  client_details_v1_user_details.json  client_details_v1_users.json  credit_cards.json  product_details.json  product_list.json
.github/workflows/: build-and-release-linux.yml  checks.yml
example/json/: account_details.json  client_details_v1_user_details.json  client_details_v1_users.json  credit_card_details.json  credit_cards.json  product_details.json  product_list.json
example/json_config/: client_details_v1_user_details.json  credit_card_details.json  credit_cards.json  product_details.json  product_list.json
example/yaml/: debit_cards.yaml
src/: app_state.rs  cache.rs  cli.rs  file_reader.rs  file_watcher.rs  main.rs  request.rs  request_handler.rs  rex.rs  swagger.rs  utils.rs  watcher.rs  watchman.rs
