[package]
name = "moker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
notify = "6.1.1"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1", features = ["full"] }
