[package]
name = "moker"
version = "0.1.2"
edition = "2021"
authors = ["Harsh Vishwakarma <vishwakarma.harsh1993@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to run mock HTTP server using simple JSON or YAML files only"
readme = "README.md"
homepage = "https://github.com/harshvishu/mocker"
repository = "https://github.com/harshvishu/mocker"
keywords = ["cli", "mock", "http", "server"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
lru = "0.11.1"
notify-debouncer-full = "0.3.1"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
